# mq-proxy/src/main/kotlin/com/github/epex/mqproxy/api/model/DeleteMessagesRequest.kt
@@ -1,0 +1,6 @@
+package com.github.epex.mqproxy.api.model
+
+data class DeleteMessagesRequest(
+    val sourceQueue: String,
+    val filter: QueueMessageFilter,
+)
