# mq-proxy/src/main/kotlin/com/github/epex/mqproxy/api/model/DeletedMessageDto.kt
@@ -1,0 +1,5 @@
+package com.github.epex.mqproxy.api.model
+
+data class DeletedMessageDto(
+    val messageId: String,
+)
