# mq-proxy/src/main/kotlin/com/github/epex/mqproxy/api/model/ListResponse.kt
@@ -1,0 +1,6 @@
+package com.github.epex.mqproxy.api.model
+
+data class ListResponse<T>(
+    val data: List<T>,
+    val errors: List<ApiError> = emptyList(),
+)
