# mq-proxy/src/main/kotlin/com/github/epex/mqproxy/api/model/MoveMessagesRequest.kt
@@ -1,0 +1,7 @@
+package com.github.epex.mqproxy.api.model
+
+data class MoveMessagesRequest(
+    val sourceQueue: String,
+    val targetQueue: String,
+    val filter: QueueMessageFilter,
+)
